--- a/style/_globals.scss
+++ b/style/_globals.scss
@@ -34,7 +34,7 @@ p {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
-	background: url(img/cover-paint.jpg);
+	background: url(/img/cover-paint.jpg);
 	background-size: cover;
 	color: #fff;
 
